src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABM_Account_Maturity__c</fullName>
        <businessOwnerUser>brock.alston@neo4j.com.trndevqa</businessOwnerUser>
        <description>Formula field to determine &quot;account level&quot;. Account level was defined by Matzen Shirley (ABM Manager). This field is currently used by Brock Alston. His Territory Machine (Google Doc) pulls data out of this field.</description>
        <formula>IF(AND(ISPICKVAL(Type,&quot;Customer&quot;), Project_in_Production__c = True), &quot;Production Customer&quot;,

IF(ISPICKVAL(Type,&quot;Customer&quot;), &quot;Pre-Prod Customer&quot;,

IF(Number_of_Open_New_Opportunities__c &gt; 0, &quot;Pipeline Account&quot;,

IF(Number_of_Contacts__c &gt; 0, &quot;Informed Account&quot;,&quot;Greenfield Account&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABM Account Maturity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABM_Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate a priority account, slightly more general than the Global priority account. Field was requested by Matzen Shirley (ABM Manager). Updated by ABM Manager</description>
        <label>ABM Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountDataVerified__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the designated data quality control person has verified the Account data and matched the record to the correct entity in the D&amp;B database. This person may be an internal employee or an independent contractor.</description>
        <inlineHelpText>Indicates whether the designated data quality control person has verified the Account data and matched the record to the correct entity in the D&amp;B database. This person may be an internal employee or an independent contractor.</inlineHelpText>
        <label>Account  Data Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_ARR_Beta__c</fullName>
        <description>DEPRECATED ON JANUARY 9, 2021 ( 2021-01-09 ) , BECAUSE after JAN 9, 2021 ARR BECOMES TRACKED AT LINE LEVEL, NOT OPPORTUNITY. No History Migration</description>
        <inlineHelpText>DEPRECATED ON JANUARY 9, 2021 ( 2021-01-09 ) , BECAUSE after JAN 9, 2021 ARR BECOMES TRACKED AT LINE LEVEL, NOT OPPORTUNITY. No History Migration</inlineHelpText>
        <label>DEPRECATED ON Jan9-2021, dont use2</label>
        <summarizedField>Opportunity.Opp_Count_1__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Term_Start_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>3/31/2020</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Term_End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>3/31/2020</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>lessOrEqual</operation>
            <value>3/31/2020</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>This field can only be populated with Account Managers</errorMessage>
            <filterItems>
                <field>User.UserRole.Id</field>
                <operation>equals</operation>
                <value>00E6A000001Aph0</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Id</field>
                <operation>equals</operation>
                <value>00E6A000001AphH</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Open_ARR__c</fullName>
        <description>DEPRECATED ON JANUARY 9, 2021 ( 2021-01-09 ) , previously this was Roll up Summary of ARR field on the opp for olpps  that are open. Excluded Renewal ARR.,     but after JAN 9, 2021 ARR BECOMES TRACKED AT LINE LEVEL, NOT OPPORTUNITY.  No History Migration</description>
        <inlineHelpText>DEPRECATED ON JANUARY 9, 2021 ( 2021-01-09 ) , previously this was Roll up Summary of ARR field on the opp for olpps  that are open. Excluded Renewal ARR.,     but after JAN 9, 2021 ARR BECOMES TRACKED AT LINE LEVEL, NOT OPPORTUNITY.  No History Migration</inlineHelpText>
        <label>DEPRECATED ON Jan9-2021, dont use</label>
        <summarizedField>Opportunity.Opp_Count_1__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Qualification, Needs Analysis, Proposal/Price Quote, Selected / Negotiation, Contract Negotiation, Procurement</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Revenue_Source__c</fullName>
        <description>Hoovers/Wikipedia/etc link where obtained acct revenue source</description>
        <label>Account Revenue Source</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Account_Revenue__c</fullName>
        <description>Picklist to normalize an account&apos;s annual revenue.</description>
        <label>Account Revenue ($)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 10 Million</fullName>
                </value>
                <value>
                    <fullName>10 - 25 Million</fullName>
                </value>
                <value>
                    <fullName>25 - 100 Million</fullName>
                </value>
                <value>
                    <fullName>100 - 500 Million</fullName>
                </value>
                <value>
                    <fullName>500 Million - 1 Billion</fullName>
                </value>
                <value>
                    <fullName>1 Billion - 5 Billion</fullName>
                </value>
                <value>
                    <fullName>5 Billion +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Subtype__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field is used for both Customer and Partner Account types, but different values show up on each through the designated record types. Indicates what specific customer or partner type this company is as it relates to Neo4j. SFDCSPT-540</description>
        <inlineHelpText>Indicates what specific customer or partner type this company is as it relates to Neo4j. Multiple values can be selected.</inlineHelpText>
        <label>Account Subtype</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>OEM (Sub)</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Systems Integrator</fullName>
                </value>
                <value>
                    <fullName>Technology Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allbound_ID__c</fullName>
        <description>Unique identifier for an account in the Allbound product. Allbound is the partner management portal.</description>
        <label>Allbound ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allbound_Status__c</fullName>
        <description>Indicates Allbound Status of an account.</description>
        <label>Allbound Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_User_ID__c</fullName>
        <externalId>true</externalId>
        <label>Assigned User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Email_Address__c</fullName>
        <description>The email address invoices should be sent to.</description>
        <label>Billing Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cash_Basis__c</fullName>
        <businessOwnerGroup>Finance</businessOwnerGroup>
        <description>Used to tag risky accounts. &apos;Yes&apos; indicates that Neo4j should wait until the payment has been received to recognize revenue. &apos;Yes&apos; means it is best to wait for the actual payment before before moving any Opportunity on the Account to Closed Won. &apos;No&apos; is the default value indicating that the team can proceed the standard way.</description>
        <inlineHelpText>Used to tag risky accounts. &apos;Yes&apos; indicates that Neo4j should wait until the payment has been received to recognize revenue. &apos;Yes&apos; means it is best to wait for the actual payment before before moving any Opportunity on the Account to Closed Won. &apos;No&apos; is the default value indicating that the team can proceed the standard way.</inlineHelpText>
        <label>Cash Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_1__c</fullName>
        <description>Power of 1 formula field.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Acquisition_Date__c</fullName>
        <businessOwnerGroup>Sales_Operations</businessOwnerGroup>
        <description>Term start date of customers first subscription deal.</description>
        <inlineHelpText>Term start date of customers first subscription deal. This field is used by Sales Operations and Analytics.</inlineHelpText>
        <label>Customer Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Cancellation_Date__c</fullName>
        <businessOwnerGroup>Sales_Operations</businessOwnerGroup>
        <description>Term end date of customers last active term if they have churned.</description>
        <inlineHelpText>Term end date of customers last active term if they have churned. This field is used by Sales Operations and Analytics.</inlineHelpText>
        <label>Customer Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Segment_Update_Status__c</fullName>
        <label>Customer Segment Update Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Refresh</fullName>
                </value>
                <value>
                    <fullName>Auto-Calculated</fullName>
                </value>
                <value>
                    <fullName>Overwritten</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aura Enterprise</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Diamond</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                    <isActive>false</isActive>
                    <label>VIP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Success_Top_Account__c</fullName>
        <businessOwnerGroup>Customer_Success</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>This field is manually maintained by Customer Success management to indicate whether the Account has CSM and/or CSA coverage. JIRA: SFDCSPT-502</description>
        <inlineHelpText>This field is used by the Customer Success Team to indicate whether an Account is covered by a CSM and/or CSA. Changes should only be made by CS management.</inlineHelpText>
        <label>Customer Success Top Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>Indicates if a customer is an OEM account or OEM and Subscription account.</description>
        <inlineHelpText>Indicates whether a customer is an OEM account or OEM and Subscription account. ATTENTION: This field will be deprecated. Use &apos;Account Subtype&apos; field instead.</inlineHelpText>
        <label>Customer Type (DeprecateCandidate)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>OEM (Sub)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNB_D_U_N_S_Number_Field_Length__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This field is reserved for admin use. It calculates the number of digits in the &apos;D&amp;B DUNS Number&apos; field. JIRA: SFDCSPT-399</description>
        <formula>LEN(DNBoptimizer__DNB_D_U_N_S_Number__c)</formula>
        <inlineHelpText>Displays the number of digits in the &apos;D&amp;B DUNS Number&apos; field.</inlineHelpText>
        <label>D&amp;B DUNS Number Field Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DNB_D_U_N_S_Number__c</fullName>
        <description>Upon successful match, Optimizer populates this field and references it for future refreshes. The Dun &amp; Bradstreet D-U-N-S® Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</description>
        <inlineHelpText>Upon successful match, Optimizer populates this field and references it for future refreshes. It is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity based on the Data Universal Numbering System (D-U-N-S).</inlineHelpText>
        <label>D&amp;B DUNS Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DnBCompanyRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upon a successful match, Optimizer populates this field that links the Account record to a specific D-U-N-S Number for display of the correct custom object with D&amp;B data.</description>
        <inlineHelpText>Upon a successful match, Optimizer populates this field that links the Account record to a specific D-U-N-S Number for display of the correct custom object with D&amp;B data.</inlineHelpText>
        <label>AccountToDnB</label>
        <referenceTo>DNBoptimizer__DnBCompanyRecord__c</referenceTo>
        <relationshipLabel>AccountToDnB</relationshipLabel>
        <relationshipName>AccountToDnB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__Number_Of_Opportunity__c</fullName>
        <description>This field calculates the number of linked Opportunities per Account to display on the Data Stewardship Dashboards.</description>
        <inlineHelpText>This field calculates the number of linked Opportunities per Account to display on the Data Stewardship Dashboards.</inlineHelpText>
        <label>Number Of Opportunity</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>D_B_Business_Name__c</fullName>
        <label>D&amp;B Business Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Domestic_Ultimate_Business_Name__c</fullName>
        <label>D&amp;B Domestic Ultimate Business Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Domestic_Ultimate_D_U_N_S_Number__c</fullName>
        <label>D&amp;B Domestic Ultimate D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Employee_Count_Here__c</fullName>
        <label>D&amp;B Employee Count Here</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_B_Employee_Count_Total__c</fullName>
        <label>D&amp;B Employee Count Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_B_Fortune_1000_Rank__c</fullName>
        <label>D&amp;B Fortune 1000 Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Global_Ultimate_Business_Name__c</fullName>
        <label>D&amp;B Global Ultimate Business Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Global_Ultimate_D_U_N_S_Number__c</fullName>
        <label>D&amp;B Global Ultimate D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Headquarter_Business_Name__c</fullName>
        <label>D&amp;B Headquarter Business Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Headquarter_D_U_N_S_Number__c</fullName>
        <label>D&amp;B Headquarter D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Location_Type__c</fullName>
        <label>D&amp;B Location Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Mailing_Address_City__c</fullName>
        <label>D&amp;B Mailing Address City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Mailing_Address_Country_Code__c</fullName>
        <label>D&amp;B Mailing Address Country Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Mailing_Address_Country_Region__c</fullName>
        <description>Based on the value in the &quot;D&amp;B Mailing Address Country Code&quot; field that is auto-populated by D&amp;B Optimizer. Optimizer runs every 15 days and updates that field if any changes have taken place. JIRA: SFDCSPT-66, 8/24/2020</description>
        <formula>CASE (D_B_Mailing_Address_Country_Code__c, 
&apos;AE&apos;, &apos;United Arab Emirates&apos;, 
&apos;AR&apos;, &apos;Argentina&apos;,
&apos;AT&apos;, &apos;Austria&apos;,
&apos;AU&apos;, &apos;Australia&apos;,
&apos;BE&apos;, &apos;Belgium&apos;,
&apos;BG&apos;, &apos;Bulgaria&apos;,
&apos;BH&apos;, &apos;Bahrain&apos;,
&apos;BM&apos;, &apos;Bermuda&apos;,
&apos;BR&apos;, &apos;Brazil&apos;,
&apos;CA&apos;, &apos;Canada&apos;,
&apos;CH&apos;, &apos;Switzerland&apos;,
&apos;CL&apos;, &apos;Chile&apos;,
&apos;CN&apos;, &apos;China&apos;,
&apos;CO&apos;, &apos;Colombia&apos;,
&apos;CR&apos;, &apos;Costa Rica&apos;,
&apos;CY&apos;, &apos;Cyprus&apos;,
&apos;CZ&apos;, &apos;Czech Republic&apos;,
&apos;DE&apos;, &apos;Germany&apos;,
&apos;DK&apos;, &apos;Denmark&apos;,
&apos;EC&apos;, &apos;Ecuador&apos;,
&apos;EE&apos;, &apos;Estonia&apos;,
&apos;EG&apos;, &apos;Egypt&apos;,
&apos;ES&apos;, &apos;Spain&apos;,
&apos;ET&apos;, &apos;Ethiopia&apos;,
&apos;FI&apos;, &apos;Finland&apos;,
&apos;FR&apos;, &apos;France&apos;,
&apos;GB&apos;, &apos;United Kingdom&apos;,
&apos;GH&apos;, &apos;Ghana&apos;,
&apos;GI&apos;, &apos;Gibraltar&apos;,
&apos;GR&apos;, &apos;Greece&apos;,
&apos;GT&apos;, &apos;Guatemala&apos;,
&apos;GU&apos;, &apos;Guam&apos;,
&apos;HK&apos;, &apos;Hong Kong&apos;,
&apos;HR&apos;, &apos;Croatia&apos;,
&apos;HU&apos;, &apos;Hungary&apos;,
&apos;ID&apos;, &apos;Indonesia&apos;,
&apos;IE&apos;, &apos;Ireland&apos;,
&apos;IL&apos;, &apos;Israel&apos;,
&apos;IN&apos;, &apos;India&apos;,
&apos;IS&apos;, &apos;Iceland&apos;,
&apos;IT&apos;, &apos;Italy&apos;,
&apos;JO&apos;, &apos;Jordan&apos;,
&apos;JP&apos;, &apos;Japan&apos;,
&apos;KE&apos;, &apos;Kenya&apos;,
&apos;KR&apos;, &apos;South Korea&apos;,
&apos;KW&apos;, &apos;Kuwait&apos;,
&apos;LB&apos;, &apos;Lebanon&apos;,
&apos;LK&apos;, &apos;Sri Lanka&apos;,
&apos;LT&apos;, &apos;Lithuania&apos;,
&apos;LU&apos;, &apos;Luxembourg&apos;,
&apos;MA&apos;, &apos;Morocco&apos;,
&apos;MO&apos;, &apos;Macao&apos;,
&apos;MT&apos;, &apos;Malta&apos;,
&apos;MX&apos;, &apos;Mexico&apos;,
&apos;MY&apos;, &apos;Malaysia&apos;,
&apos;NG&apos;, &apos;Nigeria&apos;,
&apos;NL&apos;, &apos;Netherlands&apos;,
&apos;NO&apos;, &apos;Norway&apos;,
&apos;NZ&apos;, &apos;New Zealand&apos;,
&apos;PA&apos;, &apos;Panama&apos;,
&apos;PE&apos;, &apos;Peru&apos;,
&apos;PH&apos;, &apos;Philippines&apos;,
&apos;PL&apos;, &apos;Poland&apos;,
&apos;PT&apos;, &apos;Portugal&apos;,
&apos;QA&apos;, &apos;Qatar&apos;,
&apos;RO&apos;, &apos;Romania&apos;,
&apos;RU&apos;, &apos;Russian Federation&apos;,
&apos;SA&apos;, &apos;Saudi Arabia&apos;,
&apos;SE&apos;, &apos;Sweden&apos;,
&apos;SG&apos;, &apos;Singapore&apos;,
&apos;SI&apos;, &apos;Slovenia&apos;,
&apos;SK&apos;, &apos;Slovakia&apos;,
&apos;SN&apos;, &apos;Senegal&apos;,
&apos;TH&apos;, &apos;Thailand&apos;,
&apos;TN&apos;, &apos;Tunisia&apos;,
&apos;TR&apos;, &apos;Turkey&apos;,
&apos;TW&apos;, &apos;Taiwan&apos;,
&apos;UA&apos;, &apos;Ukraine&apos;,
&apos;US&apos;, &apos;United States&apos;,
&apos;UY&apos;, &apos;Uruguay&apos;,
&apos;VE&apos;, &apos;Venezuela&apos;,
&apos;VG&apos;, &apos;Virgin Islands (British)&apos;,
&apos;VN&apos;, &apos;Vietnam&apos;,
&apos;ZA&apos;, &apos;South Africa&apos;,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula field displays the full country name based on the value in the &quot;D&amp;B Mailing Address Country Code&quot; field.</inlineHelpText>
        <label>D&amp;B Mailing Address Country/Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Mailing_Address_Line_1__c</fullName>
        <label>D&amp;B Mailing Address Line 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Mailing_Address_Line_2__c</fullName>
        <label>D&amp;B Mailing Address Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Mailing_Address_Postal_Code__c</fullName>
        <label>D&amp;B Mailing Address Postal Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Mailing_Address_State_Province__c</fullName>
        <description>The name of the state or province where the business has its mail delivered.</description>
        <inlineHelpText>The name of the state or province where the business has its mail delivered.</inlineHelpText>
        <label>D&amp;B Mailing Address State/Province</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Match_Data_Profile__c</fullName>
        <label>D&amp;B Match Data Profile</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Match_Grade__c</fullName>
        <label>D&amp;B Match Grade</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Match_Score_Confidence_Code__c</fullName>
        <label>D&amp;B Match Score/Confidence Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_NAICS_Code_1__c</fullName>
        <label>D&amp;B NAICS Code 1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_NAICS_Description_1__c</fullName>
        <label>D&amp;B NAICS Description 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_National_Identification_Number__c</fullName>
        <label>D&amp;B National Identification Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Number_of_Family_Members__c</fullName>
        <label>D&amp;B Number of Family Members</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_B_Out_of_Business_Indicator__c</fullName>
        <label>D&amp;B Out of Business Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Parent_Business_Name__c</fullName>
        <label>D&amp;B Parent Business Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Parent_D_U_N_S_Number__c</fullName>
        <label>D&amp;B Parent D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Primary_Address_City__c</fullName>
        <label>D&amp;B Primary Address City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Primary_Address_Country_Code__c</fullName>
        <label>D&amp;B Primary Address Country Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Primary_Address_Country_Region__c</fullName>
        <description>Auto-populated by D&amp;B Optimizer. Optimizer runs every 15 days and updates this field if any changes have taken place. 
JIRA: SFDCSPT-66, 8/24/2020</description>
        <inlineHelpText>The name of the country/region where the business is physically located.</inlineHelpText>
        <label>D&amp;B Primary Address Country/Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Primary_Address_Line_1__c</fullName>
        <label>D&amp;B Primary Address Line 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Primary_Address_Line_2__c</fullName>
        <label>D&amp;B Primary Address Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Primary_Address_Postal_Code__c</fullName>
        <label>D&amp;B Primary Address Postal Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Primary_Address_State_Province__c</fullName>
        <description>The name of the state or province where the business is physically located.</description>
        <inlineHelpText>The name of the state or province where the business is physically located.</inlineHelpText>
        <label>D&amp;B Primary Address State/Province</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_Public_Private_Indicator__c</fullName>
        <label>D&amp;B Public Private Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_SIC4_Code_1_Description__c</fullName>
        <label>D&amp;B SIC4 Code 1 Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_SIC4_Code_1__c</fullName>
        <label>D&amp;B SIC4 Code 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_SIC8_Code_1_Description__c</fullName>
        <label>D&amp;B SIC8 Code 1 Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_B_SIC8_Code_1__c</fullName>
        <label>D&amp;B SIC8 Code 1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Sales_Volume_USD__c</fullName>
        <label>D&amp;B Sales Volume USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_B_Small_Business_Indicator__c</fullName>
        <label>D&amp;B Small Business Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Telephone_Number__c</fullName>
        <label>D&amp;B Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>D_B_Web_Address__c</fullName>
        <label>D&amp;B Web Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERP_Customer_ID__c</fullName>
        <businessOwnerGroup>Finance</businessOwnerGroup>
        <description>Purpose of the field is to capture the Customer ID related to the account in finance ERP system. JIRA: SFDCSPT-341</description>
        <externalId>true</externalId>
        <inlineHelpText>Finance ERP Customer ID for the Account</inlineHelpText>
        <label>ERP Customer ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Exclude_from_D_B_Matching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is part of the D&amp;B Optimizer implementation. Checking this box will exclude any Account from any D&amp;B auto-update flows.</description>
        <inlineHelpText>Check this box to exclude the Account from D&amp;B automatic updates, except when the key fields are blank. As long as this box remains checked, D&amp;B will not overwrite any data on this Account. You can clear the checkbox anytime to resume-auto-updates.</inlineHelpText>
        <label>Exclude from D&amp;B Matching</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>